Choix des couleurs des blocs

--- a/TetrisProject/config.ini
+++ b/TetrisProject/config.ini
@@ -18,11 +18,11 @@ SECTION:highscores
 10: - - 
 *
 SECTION:boxescolors
-I:-65536
+I:-10027213
 O:-16776961
 T:-8355712
 L:-65281
-J:-1
+J:-13369549
 Z:-16711681
 S:-16711936
 EMPTY:-16777216
@@ -30,5 +30,5 @@ EMPTY:-16777216
 SECTION:lang
 English:en
 Français:fr
-current:en
+current:fr
 *
