ADDED : tetrimino moving methods + Javadoc fixing

--- a/TetrisProject/config.ini
+++ b/TetrisProject/config.ini
@@ -18,7 +18,7 @@ SECTION:highscores
 10: - - 
 *
 SECTION:boxescolors
-I:-13395712
+I:-3342388
 O:-16776961
 T:-8355712
 L:-65281
@@ -29,6 +29,6 @@ EMPTY:-16777216
 *
 SECTION:lang
 English:en
-Français:fr
+Franï¿½ais:fr
 current:fr
 *
