--- a/TetrisProject/config.ini
+++ b/TetrisProject/config.ini
@@ -18,7 +18,7 @@ SECTION:highscores
 10: - - 
 *
 SECTION:boxescolors
-I:-6736897
+I:-65536
 O:-16776961
 T:-8355712
 L:-65281
@@ -29,6 +29,6 @@ EMPTY:-16777216
 *
 SECTION:lang
 English:en
-Franï¿½ais:fr
-current:fr
+Français:fr
+current:en
 *
